(library
    (name EsyGlfw)
    (js_of_ocaml (javascript_files stubs.js))
    (libraries
        Reglm)
    (flags (:include flags.sexp))
    (c_names glad)
    (c_flags (:include c_flags.sexp))
    (cxx_names glfw_wrapper stb_image stb_image_wrapper)
    (cxx_flags (:include cxx_flags.sexp)))

(rule
    (targets c_flags.sexp cxx_flags.sexp flags.sexp)
    (deps (:discover ../config/discover.exe))
    (action (run %{discover})))
