(library
    (name reglfw)
    (public_name reglfw)
    (js_of_ocaml (javascript_files glfw_stubs.js gl_stubs.js stb_image_stubs.js))
    (libraries
        lwt
        reglm)
    (library_flags (:include flags.sexp))
    (c_names glad)
    (c_flags (:include c_flags.sexp))
    (cxx_names glfw_wrapper gl_wrapper stb_image stb_image_wrapper)
    (cxx_flags (:include cxx_flags.sexp)))

(rule
    (targets c_flags.sexp cxx_flags.sexp flags.sexp)
    (deps (:discover ../config/discover.exe))
    (action (run %{discover})))
